# tinygl

./: CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
shaders/frag/: default.glsl
shaders/vertex/: default.glsl
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
